[tool.poetry]
name = "ml4iot"
version = "0.1.0"
description = ""
authors = ["Leonardo Tredese", "Michele Veronesi", "Pietro Montresori"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
psutil = "5.9.2"
sounddevice = "0.4.5"
scipy = "1.9.1"
redis = "4.3.4"
tensorflow = "2.10.0"
tensorflow-io = "0.27.0"
cherrypy = "18.8.0"
paho-mqtt = "1.6.1"
tensorflow-model-optimization = "^0.7.3"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
matplotlib = "^3.6.1"
PyQt5 = "^5.15.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
